Update vulnerability dependancies Update about me component

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -9,13 +9,13 @@
   <div class="centered">
     <mat-card class="intro-card" >
       <mat-card-content>
-        <p class="mat-h1">
+        <p class="h1">
           Hi everyone my name is  
         </p>
-        <p class="mat-display-2">
+        <p class="display-2">
           Anshuman Kumar
         </p>
-        <p class="mat-h1">
+        <p class="h1">
          I am a Software Engineer
         </p>
       </mat-card-content>
