--- a/src/app/aboutme/aboutme.component.css
+++ b/src/app/aboutme/aboutme.component.css
@@ -40,3 +40,11 @@ body { margin: 0;     font-family: 'Playfair Display', serif; }
 .mat-card {
   background-color:rgb(231, 239, 225)
 }
+.h1 {
+  font-family: 'Playfair Display', serif; 
+  font-size:x-large;
+}
+.display-2 {
+  font-family: 'Playfair Display', serif; 
+  font-size: xxx-large;
+}
